k8s/postgres1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres1
  namespace: soa-hotel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres1
  template:
    metadata:
      labels:
        app: postgres1
    spec:
      containers:
      - name: postgres1
        image: postgres:16
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
          subPath: pgdata 
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: postgres1-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres1
  namespace: soa-hotel
spec:
  selector:
    app: postgres1
  ports:
  - port: 5432
