k8s/service2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
  namespace: soa-hotel
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          image: europe-west1-docker.pkg.dev/soa-hotel-project/soa-hotel/service2:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: service2
  namespace: soa-hotel
spec:
  selector:
    app: service2
  ports:
    - port: 8081
