k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soa-ingress
  namespace: soa-hotel
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /service1
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080
      - path: /service2
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080
      - path: /service3
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
